force-app/main/default/objects/Order__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>What is a city of the company address to be included in the invoice?</description>
    <inlineHelpText>What is a city of the company address to be included in the invoice?</inlineHelpText>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>