force-app/main/default/objects/Order__c/fields/BillingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>BillingCompanyName__c</fullName>
    <description>What data should be included in the invoice?</description>
    <inlineHelpText>What data should be included in the invoice?</inlineHelpText>
    <label>Billing Company Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>