force-app/main/default/objects/Order__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>What is the the company country to be included in the invoice?</description>
    <inlineHelpText>What is the the company country to be included in the invoice?</inlineHelpText>
    <label>Billing Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>