force-app/main/default/objects/Order__c/fields/BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingFirstName__c</fullName>
    <description>What is a first name of the employee to be included in the invoice?</description>
    <inlineHelpText>What is a first name of the employee to be included in the invoice?</inlineHelpText>
    <label>Billing First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>