force-app/main/default/objects/Order__c/fields/BillingLastName__c.field-meta.xml
<CustomField>
    <fullName>BillingLastName__c</fullName>
    <description>What data should be included in the invoice?</description>
    <inlineHelpText>What data should be included in the invoice?</inlineHelpText>
    <label>Billing Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>