force-app/main/default/objects/Order__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>What data should be included in the invoice?</description>
    <inlineHelpText>What data should be included in the invoice?</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>