force-app/main/default/objects/Order__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>What is a street of the company address to be included in the invoice?</description>
    <inlineHelpText>What is a street of the company address to be included in the invoice?</inlineHelpText>
    <label>Billing Street</label>
    <length>30</length>
    <type>Text</type>
</CustomField>