force-app/main/default/objects/Order__c/fields/BillingVATNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingVATNumber__c</fullName>
    <description>What is the company VAT number be included in the invoice?</description>
    <inlineHelpText>What is the company VAT number be included in the invoice?</inlineHelpText>
    <label>Billing VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>