force-app/main/default/objects/Order__c/fields/IsB2B__c.field-meta.xml
<CustomField>
    <fullName>IsB2B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the invoice be issued to the company?</description>
    <inlineHelpText>Should the invoice be issued to the company?</inlineHelpText>
    <label>Is B2B</label>
    <type>Checkbox</type>
</CustomField>