force-app/main/default/objects/Order__c/fields/OrderGrossValue__c.field-meta.xml
<CustomField>
    <fullName>OrderGrossValue__c</fullName>
    <description>Gross Value of the entire Order</description>
    <inlineHelpText>Gross Value of the entire Order</inlineHelpText>
    <label>Order Gross Value</label>
    <summarizedField>OrderLineItem__c.TotalGrossPrice__c</summarizedField>
    <summaryForeignKey>OrderLineItem__c.OnlineOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>