force-app/main/default/objects/Order__c/fields/OrderNetValue__c.field-meta.xml
<CustomField>
    <fullName>OrderNetValue__c</fullName>
    <description>Net Value of the entire Order</description>
    <inlineHelpText>Net Value of the entire Order</inlineHelpText>
    <label>Order Net Value</label>
    <summarizedField>OrderLineItem__c.TotalNetPrice__c</summarizedField>
    <summaryForeignKey>OrderLineItem__c.OnlineOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>