force-app/main/default/objects/Order__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <description>Has the client already paid? Is it confirmed?</description>
    <inlineHelpText>Has the client already paid? Is it confirmed?</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
            <value>
                <fullName>WAITING_FOR_CONFIRMATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>