force-app/main/default/objects/Order__c/fields/PayUPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>PayUPaymentLink__c</fullName>
    <defaultValue>&quot;https://poland.payu.com/&quot;</defaultValue>
    <description>Link which enable the customer to pay for the order</description>
    <inlineHelpText>Link which enable the customer to pay for the order</inlineHelpText>
    <label>PayU Payment Link</label>
    <type>Url</type>
</CustomField>