force-app/main/default/objects/Order__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <description>Where to ship an Order?</description>
    <inlineHelpText>Where to ship an Order?</inlineHelpText>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>