force-app/main/default/objects/Order__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <description>Where to ship an Order?</description>
    <inlineHelpText>Where to ship an Order?</inlineHelpText>
    <label>Shipping Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>