force-app/main/default/objects/Order__c/fields/ShippingEmail__c.field-meta.xml
<CustomField>
    <fullName>ShippingEmail__c</fullName>
    <description>What is email of the order recipent?</description>
    <inlineHelpText>What is email of the order recipent?</inlineHelpText>
    <label>Shipping Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>