force-app/main/default/objects/Order__c/fields/ShippingFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShippingFirstName__c</fullName>
    <description>What is first name of the order recipent?</description>
    <inlineHelpText>What is first name of the order recipent?</inlineHelpText>
    <label>Shipping First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>