force-app/main/default/objects/Order__c/fields/ShippingLastName__c.field-meta.xml
<CustomField>
    <fullName>ShippingLastName__c</fullName>
    <description>Where to ship an Order?</description>
    <inlineHelpText>Where to ship an Order?</inlineHelpText>
    <label>Shipping Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>