force-app/main/default/objects/Order__c/fields/ShippingPhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingPhone__c</fullName>
    <description>Where to ship an Order?</description>
    <inlineHelpText>Where to ship an Order?</inlineHelpText>
    <label>Shipping Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>