force-app/main/default/objects/Order__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <description>What is shipping code of the order recipent?</description>
    <inlineHelpText>What is shipping code of the order recipent?</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>