force-app/main/default/objects/Order__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <description>What is shipping street of the order recipent?</description>
    <inlineHelpText>What is shipping street of the order recipent?</inlineHelpText>
    <label>Shipping Street</label>
    <length>30</length>
    <type>Text</type>
</CustomField>